# corsslingual-semantics-docs

./: .buildinfo  LICENSE  README.md  aggregator.html  aggregrator.html  annotation.html  annotations.html  enhancer.html  enhancing_swow.html  genindex.html  index.html  installation.html  introduction.html  objects.inv  overview.html  pyproject.toml  search.html  searchindex.js  usage.html
.doctrees/: enhancer.doctree  enhancing_swow.doctree  environment.pickle  index.doctree  introduction.doctree  overview.doctree  usage.doctree
.github/workflows/: deploy_docs.yml
_sources/: annotation.rst.txt  annotations.rst.txt  enhancing_swow.rst.txt  index.rst.txt  introduction.rst.txt  usage.rst.txt
_static/: custom.css
docs/: aggregator.rst  aggregrator.rst  conf.py  enhancing_swow.rst  index.rst  introduction.rst  usage.rst
docs/_build/html/: .buildinfo  .buildinfo.bak  aggregator.html  enhancer.html  enhancing_swow.html  genindex.html  index.html  installation.html  introduction.html  objects.inv  search.html  searchindex.js  usage.html
docs/_build/html/.doctrees/: aggregator.doctree  aggregrator.doctree  annotation.doctree  annotations.doctree  enhancer.doctree  enhancing_swow.doctree  environment.pickle  index.doctree  installation.doctree  introduction.doctree  usage.doctree
docs/_build/html/_sources/: enhancer.rst.txt  enhancing_swow.rst.txt  index.rst.txt  installation.rst.txt  overview.rst.txt
docs/_static/: custom.css
